@@ -19,6 +19,7 @@
     \itemize{
         \item More efficient version of \code{match} based on \code{IndexHash}
         \item More efficient version of \code{unique} base on \code{IndexHash}
+        \item More efficient version of \code{in} base on \code{IndexHash}
     }
   }
 }
